fixed linenos, center-aligned figcaptions

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -18,3 +18,5 @@ html, body {
 footer[role=contentinfo] {
     height: 60px;
 }
+
+pre.line-numbers { display: none; }
