--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -219,6 +219,7 @@ figure.code, .gist {
   figcaption {
     position: relative;
     //@extend .code-title;
+	text-align:  center;
     a { @extend .download-source; }
   }
   .highlight {
